Fixed colors - Dark mode

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -15,9 +15,6 @@
   p {
     font-size: 16px;
     line-height: 22px;
-
-    color: #8c8c8c;
-
     margin: 0;
   }
 
@@ -45,7 +42,7 @@
 }
 
 #error {
-  color: red;
+  color: var(--ion-color-danger);
   margin-top: 10px;
   font-size: 14px;
   position: absolute;
